projects/maison/src/infrastructure/kubernetes/default.gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default
  namespace: default
spec:
  gatewayClassName: traefik-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: maison.chezmoi.sh-https
      hostname: "*.maison.chezmoi.sh"
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard.maison.chezmoi.sh-certificate
      allowedRoutes:
        namespaces:
          from: All
    - name: chezmoi.sh-https
      hostname: "*.chezmoi.sh"
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard.maison.chezmoi.sh-certificate
      allowedRoutes:
        namespaces:
          from: All
